tekton/was-liberty-install.yaml
### Requires namespace/project to be created and IBM Entitlement Key
### placed in ibm-entitlement-key secret
### oc create secret docker-registry ibm-entitlement-key --docker-server=cp.icr.io --docker-username=cp --docker-password=ENTITLEMENT_KEY --docker-email=OCP_LOGIN_CREDENTIALS
### Get Entitlement Key from https://myibm.ibm.com/products-services/containerlibrary
---
# create namespace
kind: Namespace
apiVersion: v1
metadata:
  name: was-liberty
  labels:
    name: was-liberty
